update: dynamic link update

--- a/views/category.html
+++ b/views/category.html
@@ -24,7 +24,7 @@
 
         <!-- Section: Dashboard -->
         <a
-          href="#"
+          href=""
           class="flex items-center gap-3 text-base bg-[#3A0CA3] text-white font-medium px-4 py-3 rounded-lg mb-6"
         >
           <svg
@@ -52,7 +52,7 @@
           </h2>
           <div class="flex flex-col gap-3">
             <a
-              href="#"
+              href="./createpost.html"
               class="flex items-center gap-3 text-base text-black hover:text-[#3A0CA3] hover:font-medium"
             >
               <svg
