--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -52,7 +52,7 @@
           </h2>
           <div class="flex flex-col gap-3">
             <a
-              href="#"
+              href="./createpost.html"
               class="flex items-center gap-3 text-base text-black hover:text-[#3A0CA3] hover:font-medium"
             >
               <svg
